Resolução so exercício da aula de HTML - Livia Araujo

--- a/Aulas-HTML/exercicios/aula1/index.html
+++ b/Aulas-HTML/exercicios/aula1/index.html
@@ -14,3 +14,21 @@ Entrega:
  - Abrir um pull request para o repositório original (da Womakers)
  - Acompanhar o prazo e marcar a entrega no Classroom
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Livia Araujo</title>
+</head>
+<body>
+  <h1><ul>O que eu espero do curso de Primeiros Passos em Front-end</ul></h1>
+  <p><h6>WoMakersCode</h6></p>
+  <li>Aprender mais sobre front-end</li>
+  <li>Construir uma página web sozinha</li>
+  <li>Fazer networking com mulheres que trabalham na tecnologia</li>
+  <li>Possibilitar uma transição de carreira para desenvolvedora front-end</li>
+  <li>Ter voz ativa nos fóruns de igualdade de gênero no mercado de tecnologia</li>
+  <li>Ser embaixadora do propósito de inclusão de mulheres na tecnologia</li>
+  </body>
+</html>
