--- a/Aulas-HTML/exemplos/index.html
+++ b/Aulas-HTML/exemplos/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Site da Rita</title>
+    <title>Site da Livia</title>
   </head>
   <body>
     <h1>Esse é um titulo</h1>
     <p>Esse aqui é um paragrafo</p>
+    <a href="../detalhes.html">Link para a página de detalhes</a> <!--a cada ../ ele sobe um nível de pasta-->
   </body>
 </html>
