Resolução do exercício Aula 2 HTML

--- a/Aulas-HTML/exercicios/aula2/index.html
+++ b/Aulas-HTML/exercicios/aula2/index.html
@@ -21,3 +21,81 @@ Entrega:
  - Abrir um pull request para o repositório original (da Womakers)
  - Acompanhar o prazo e marcar a entrega no Classroom
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exercicio Aula 2 Livia Araujo</title>
+</head>
+<body>
+  <a href="https://medium.com/@liviamsaraujo" target="_blank">Página de referência</a>
+  <header>
+    <h1>Medium</h1>
+    <nav>
+      <ul>
+        <li>
+          <figure>
+            <img src="https://www.clipartmax.com/png/middle/194-1949083_view-product-range-lupa-png.png" 
+            alt="lupa"
+            title="Pesquisar">
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="https://cpng.pikpng.com/pngl/s/125-1255467_instagram-clipart-instagram-post-bookmark-symbol-on-instagram.png" 
+            title="Salvar story"
+            alt="salvar">
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="https://img1.gratispng.com/20180810/hxb/kisspng-portable-network-graphics-computer-icons-scalable-shape-svg-png-icon-free-download-368464-onlin-5b6e2cd8517076.2420087315339470963336.jpg" 
+            title="Notificações"
+            atl="sininho">
+          </figure>
+        </li>
+        <li>
+          <button name="b_update">Update</button>
+        </li>
+        <li>
+          <figure>
+            <img src="https://img.icons8.com/cotton/2x/person-male.png" 
+            title="Minha conta"
+            alt="usuário">
+          </figure>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <aside>
+      <h3>Livia Araujo</h3>
+      <p><h5>Engineer, tech enthusiast, gender equity advocate 
+        and travel lover trying to make a difference in this chaotic world.</h5></p>
+        <p> 1 Following     1 Follower</p>
+    </aside>
+    <nav>
+      <ul>
+        <li>Profile</li>
+        <li>Claps</li>
+      </ul>
+    </nav>
+    <section>
+      <h2>Latest</h2>
+      <article>
+        <h4>Livia Araujo</h4>
+        <p>Aug 16 - 4 min read</p>
+        <h2>Don't fall in love with potential (not even with your own)</h2>
+      </article>
+    </section>
+    <section>
+      <h2>Claps from Livia Araujo</h2>
+      <article>
+        <h3>Without a Compelling Product Vision Teams Become Feature Factories</h3>
+        <p>David Pereira</p>
+      </article>
+    </section>
+  </main>
+</body>
+</html>
