Refatoração do exercício 2 incluindo boas práticas de acessibilidade

--- a/Aulas-HTML/exercicios/aula2/index.html
+++ b/Aulas-HTML/exercicios/aula2/index.html
@@ -22,77 +22,76 @@ Entrega:
  - Acompanhar o prazo e marcar a entrega no Classroom
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercicio Aula 2 Livia Araujo</title>
 </head>
 <body>
-  <a href="https://medium.com/@liviamsaraujo" target="_blank">Página de referência</a>
   <header>
-    <h1>Medium</h1>
+    <a href="https://medium.com/@liviamsaraujo" target="_blank">Página de referência</a>
+    <p><img src="https://miro.medium.com/max/968/1*F6SrJR7_s95r6oCF3ugMZw.png"
+    alt="Logo do Medium"></p>
     <nav>
       <ul>
         <li>
-          <figure>
+          <button name="b_search">
             <img src="https://www.clipartmax.com/png/middle/194-1949083_view-product-range-lupa-png.png" 
-            alt="lupa"
+            alt="Lupa para pesquisa"
             title="Pesquisar">
-          </figure>
+          </button>
         </li>
         <li>
-          <figure>
+          <button name="b_save">
             <img src="https://cpng.pikpng.com/pngl/s/125-1255467_instagram-clipart-instagram-post-bookmark-symbol-on-instagram.png" 
-            title="Salvar story"
-            alt="salvar">
-          </figure>
+            alt="Bandeira para salvar story"
+            title="Salvar story">
+          </button>
         </li>
         <li>
-          <figure>
+          <button name="b_notifications">
             <img src="https://img1.gratispng.com/20180810/hxb/kisspng-portable-network-graphics-computer-icons-scalable-shape-svg-png-icon-free-download-368464-onlin-5b6e2cd8517076.2420087315339470963336.jpg" 
-            title="Notificações"
-            atl="sininho">
-          </figure>
+            atl="Sininho para visualizar notificações"
+            title="Notificações">
+          </button>
         </li>
         <li>
-          <button name="b_update">Update</button>
+          <button name="b_upgrade">Upgrade</button>
         </li>
         <li>
-          <figure>
+          <button name="b_user_icon">
             <img src="https://img.icons8.com/cotton/2x/person-male.png" 
-            title="Minha conta"
-            alt="usuário">
-          </figure>
+            alt="Ícone de usuário"
+            title="Minha conta">            
+          </button>
         </li>
       </ul>
     </nav>
   </header>
+  <aside>
+      <h4>Livia Araujo</h4>
+      <p lang="en">Engineer, tech enthusiast, gender equity advocate 
+        and travel lover trying to make a difference in this chaotic world.</p>
+        <p lang="en"> 1 Following     1 Follower</p>
+  </aside>
   <main>
-    <aside>
-      <h3>Livia Araujo</h3>
-      <p><h5>Engineer, tech enthusiast, gender equity advocate 
-        and travel lover trying to make a difference in this chaotic world.</h5></p>
-        <p> 1 Following     1 Follower</p>
-    </aside>
-    <nav>
-      <ul>
+    <ul>
         <li>Profile</li>
         <li>Claps</li>
-      </ul>
-    </nav>
+    </ul>
     <section>
-      <h2>Latest</h2>
+      <p lang="en">Latest</p>
       <article>
-        <h4>Livia Araujo</h4>
-        <p>Aug 16 - 4 min read</p>
-        <h2>Don't fall in love with potential (not even with your own)</h2>
+        <p>Livia Araujo</p>
+        <p lang="en">Aug 16 - 4 min read</p>
+        <h1 lang="en">Don't fall in love with potential (not even with your own)</h1>
       </article>
     </section>
     <section>
-      <h2>Claps from Livia Araujo</h2>
+      <p lang="en">Claps from Livia Araujo</p>
       <article>
-        <h3>Without a Compelling Product Vision Teams Become Feature Factories</h3>
+        <h2 lang="en">Without a Compelling Product Vision Teams Become Feature Factories</h2>
         <p>David Pereira</p>
       </article>
     </section>
