Resolução do exercício 3 HTML - Acessibilidade

--- a/Aulas-HTML/exercicios/aula3/index.html
+++ b/Aulas-HTML/exercicios/aula3/index.html
@@ -14,16 +14,19 @@ Entrega:
 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <title>Exercício 3</title>
   </head>
   <body>
-    <h1>seu nome e sobrenome</h1>
+    <h1>Lívia Araújo</h1>
 
-    <img src="./img1.jpg" alt="" />
+    <img src="./img1.jpg" alt="Mulher agachada colocando joelheira 
+    em uma menina sentada que está calçando patins." />
 
-    <img src="./img2.jpg" alt="time" />
+    <img src="./img2.jpg" alt="Oito adultos formando um círculo, 
+    cada um com uma das mãos estendidas se encontrando no centro, uma mão em cima da outra,
+    indicando trabalho em equipe"/>
   </body>
 </html>
