--- a/aula-css/exercicios/photo-grid/aula-2/details-03.html
+++ b/aula-css/exercicios/photo-grid/aula-2/details-03.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details Birmingham - England</title>
+    <title>Details Cappadocia - Turkey</title>
     <link rel="stylesheet" type="text/css" href="details.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 </head>
